Major desgin imporvement